# ltm-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  submission.md
docs/: capstone-project.md
external_tools/: tools.py
pipelines/: google-day1.yaml  planning.yml
src/ltm_agent/: agents.py  config.py  main.py  output_formatter.py  pipeline.py  tools.py
src/ltm_agent/prompts/: thinking_agent.txt
tests/ltm_agent/: test_main.py
